<?xml version="1.0"?>
<package format="2">
  <name>pure_pursuit</name>
  <version>0.1.0</version>
  <description>The pure_pursuit package</description>

  <author email="wpgnssla34@kaist.ac.kr">Kang Jehun</author>
  <maintainer email="wpgnssla34@kaist.ac.kr">Kang Jehun</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>velocity_profile_msgs</build_depend>
  <build_depend>velocity_profile_srvs</build_depend>
  <build_depend>utils_basic</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>velocity_profile_msgs</build_export_depend>
  <build_export_depend>velocity_profile_srvs</build_export_depend>
  <build_export_depend>utils_basic</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>velocity_profile_msgs</exec_depend>
  <exec_depend>velocity_profile_srvs</exec_depend>
  <exec_depend>utils_basic</exec_depend>

</package>
